--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ pages:
     - Architecture: development/architecture.md
     - Update Safety: development/update-safety.md
     - Docker: development/docker.md
+    - Client/Native: development/client.md
 - Community:
     - Contribute: community/contribute.md
     - Monthly Call: community/monthly-call.md
